WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
40763
[DRT/Chromium] Fix a bug of Windows pixel tests
https://bugs.webkit.org/show_bug.cgi?id=40763
Summary
[DRT/Chromium] Fix a bug of Windows pixel tests
Kent Tamura
Reported
2010-06-17 01:02:10 PDT
[DRT/Chromium] Fix a bug of Windows pixel tests
Attachments
Patch
(1.26 KB, patch)
2010-06-17 01:02 PDT
,
Kent Tamura
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Kent Tamura
Comment 1
2010-06-17 01:02:57 PDT
Created
attachment 58969
[details]
Patch
Kent Tamura
Comment 2
2010-06-17 01:31:45 PDT
Comment on
attachment 58969
[details]
Patch Clearing flags on attachment: 58969 Committed
r61314
: <
http://trac.webkit.org/changeset/61314
>
Kent Tamura
Comment 3
2010-06-17 01:31:53 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug