2010-06-17  Kent Tamura  <tkent@chromium.org>

Reviewed by Shinichiro Hamaji.

        [DRT/Chromium] Fix a bug of Windows pixel tests
        https://bugs.webkit.org/show_bug.cgi?id=40763

        * DumpRenderTree/chromium/TestEventPrinter.cpp:
        (TestShellPrinter::handleImage):

git-svn-id: svn://svn.chromium.org/blink/trunk@61314 bbb929c8-8fbe-4397-9dbb-9b2b20218538