third_party/WebKit/WebKitTools/DumpRenderTree/chromium/TestEventPrinter.cpp
@@ -143,7 +143,7 @@ void TestShellPrinter::handleImage(const char* actualHash, const char*, const un
     if (imageData && imageSize) {
         ASSERT(fileName);
         FILE* fp = fopen(fileName, "wb");
-        if (fp) {
+        if (!fp) {
             perror(fileName);
             exit(EXIT_FAILURE);
         }
